# game-engine

./: .env.example  README.md  coding-question-schema.md  delete_all_questions.py  generate_coding_questions.py  pyproject.toml
src/: app.py  config.py  extensions.py  schemas.py
src/models/: __init__.py  models.py
src/routes/: audit_routes.py  auth_routes.py  config_routes.py  event_routes.py  game_routes.py  leaderboard_routes.py  question_bank_routes.py  question_routes.py
src/services/: audit.py  auth.py  evaluator.py
src/services/sandbox/: build_images.sh  runner.py
src/templates/: index.html
